# WebCalculator

./: .gitignore
backend/backend/: Cargo.toml
backend/backend/src/: lib.rs
backend/backend_wasm/testLeL/src/: main.rs
backend/evalexpr-main/: Cargo.toml
backend/rustBackend/backend/src/: lib.rs
backend/rustBackend/evalexpr-main/src/function/: builtin.rs
backend/rustBackend/tester/src/: main.rs
backend/someExtraFunctionsInTsThatDontWorkInRustMadeWithNerdamer_TsBackend/backend/nerdamer-master/: Calculus.js  index.d.ts
backend/someExtraFunctionsInTsThatDontWorkInRustMadeWithNerdamer_TsBackend/test/: test.js  test.ts
backend/tester/: Cargo.toml
backend/tester/src/: main.rs
backend/wasm-test/: Cargo.toml  LICENSE_MIT
backend/wasm-test/src/: lib.rs
backend_typeScript/backend/: backend.ts
backend_typeScript/test/: test.ts
backend_wasm/testLeL/: Cargo.toml
backend_wasm/testLeL/src/: main.rs
frontend/: package-lock.json
frontend/WebCalculator/: .gitignore  README.md  angular.json  package-lock.json  package.json  start.cmd
frontend/WebCalculator/backend/: backend.ts
frontend/WebCalculator/backends/backend_rust/implTester/: Cargo.toml
frontend/WebCalculator/backends/backend_rust/implTester/src/: main.rs
frontend/WebCalculator/backends/backend_rust/rust-to-wasm/: Cargo.toml  LICENSE_MIT
frontend/WebCalculator/backends/backend_ts/: backend.js  backend.ts
frontend/WebCalculator/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  funcs.ts  functions.ts  search-filter.pipe.ts
(+34 files in other folders)
