[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../implementation/backend" }
evalexpr = { path = "../implementation/evalexpr-main" }
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"